--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://emmanuel3690.github.io/QuickCrow",
+  "homepage": "https://emmanuel3690.github.io/vite-project--QuickCrow",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
